--- a/PartyInvites/PartyInvites/PartyInvites/Views/Home/Thanks.cshtml
+++ b/PartyInvites/PartyInvites/PartyInvites/Views/Home/Thanks.cshtml
@@ -8,8 +8,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Thanks</title>
+    <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
 </head>
-<body>
+<body class="text-center">
     <p>
         <h1>Thank you, @Model.Name</h1>
         @if (Model.WillAttend == true)
@@ -21,6 +22,6 @@
             @:Sorry to hear that you can't make it, but thanks for letting me know.
         }
     </p>
-    <p>Click <a asp-action="ListResponses">here</a> to see who is coming.</p>
+    <p>Click <a class="nav-link" asp-action="ListResponses">here</a> to see who is coming.</p>
 </body>
 </html>
