--- a/PartyInvites/PartyInvites/PartyInvites/Views/Home/RsvpForm.cshtml
+++ b/PartyInvites/PartyInvites/PartyInvites/Views/Home/RsvpForm.cshtml
@@ -3,33 +3,58 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>RSVP Form</title>
+    <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/css/styles.css" rel="stylesheet" />
 </head>
 <body>
-    <form asp-action="RsvpForm" method="post">
-        <p>
-            <label asp-for="Name">Your name:</label>
-            <input asp-for="Name" />
-        </p>
 
-        <p>
-            <label asp-for="Email">Your email:</label>
-            <input asp-for="Email" />
-        </p>
+    <div class="panel-heading text-center">
+        <h4>RSVP</h4>
+    </div>
+    <div class="panel-body">
+        <form asp-action="RsvpForm" method="post">
 
-        <p>
-            <label asp-for="Phone">Your phone:</label>
-            <input asp-for="Phone" />
-        </p>
+            <div asp-validation-summary="All"></div>
 
-        <p>
-            <label>Will you attend?</label>
-            <select asp-for="WillAttend">
-                <option value="">Choose an option...</option>
-                <option value="true">Yes, I'll be there</option>
-                <option value="false">No, I can't be there</option>
-            </select>
-        </p>
-        <button type="submit">Submit RSVP</button>
-    </form>
+            <div class="form-group">
+                <p>
+                    <label asp-for="Name">Your name:</label>
+                    <input class="form-control" asp-for="Name" />
+                </p>
+            </div>
+            
+
+            <div class="form-group">
+                <p>
+                    <label asp-for="Email">Your email:</label>
+                    <input class="form-control" asp-for="Email" />
+                </p>
+            </div>
+
+            <div class="form-group">
+                <p>
+                    <label asp-for="Phone">Your phone:</label>
+                    <input class="form-control" asp-for="Phone" />
+                </p>
+            </div>
+
+            <div class="form-group">
+                <p>
+                    <label>Will you attend?</label>
+                    <select class="form-control" asp-for="WillAttend">
+                        <option value="">Choose an option...</option>
+                        <option value="true">Yes, I'll be there</option>
+                        <option value="false">No, I can't be there</option>
+                    </select>
+                </p>
+            </div>
+
+            <div class="text-center">
+                <button class="btn btn-primary"type="submit">Submit RSVP</button>
+            </div>
+            
+        </form>
+    </div>
+    
 </body>
 </html>
